폴더 이름 오타 수정

--- a/save-points/step-02-start/HikingMateWebApp/HikingMate.WebApp/HikingMate.WebApp/Components/Pages/ChatRoom.razor
+++ b/save-points/step-02-start/HikingMateWebApp/HikingMate.WebApp/HikingMate.WebApp/Components/Pages/ChatRoom.razor
@@ -37,8 +37,7 @@
                 {
                     <div class="@item.CSS">
                         <div class="user">@item.Username</div>
-                        @* <div class="msg">@(@item.Message))</div> *@
-                        <div class="msg">@((MarkupString)@item.MarkdownMessage)</div>
+                        <div class="msg">@item.Message</div>
                     </div>
                 }
             }
